
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2589] Fixed issue with port 80 feeds in magpie RSS feed parser
- [#2544] Fixed issue with updatefromgrid processor with User Settings
- [#2560] Fixed issue with resourcelist TV not persisting set value
- [#2586] Add rank field to FC rules allowing organizing of order of execution
- Update core schemas and regenerate maps for new xPDO index elements
- [#69] Allow Transport Vehicles to abort installation when validation fails
- Update xPDO version to 2.0.0-rc2 (official release)
- [#2552] Fix scope issues when passing nested arrays in Chunk properties

MODx Revolution 2.0.4-pl2 (October 15, 2010)
====================================
- [#2502] Fix fatal error with Resources protected by Resource Groups
- Fixed issue with resourcelist TV

MODx Revolution 2.0.4-pl (October 14, 2010)
====================================
- Fixed issue where redirect was not working after creating new derivative resource
- [#2485] Fixed issue where placeholder was in duplicated Access Policy
- [#2492] Fixed reference in menu to bugs.modx.com
- [#2486] Removed hardcoded language reference in lexicon load in access permissions getList processor
- [#126] Ensured clearing of cache when deleting a Template Variable
- Fixed issue where cancel button did not work on Resources after save
- Fixed issue with URL TV Output Render and empty input values
- Fixed issues with checkboxes/radios in TVs and widths when hidden
- Fixed various issues with thumbnails in MODx.Browser and return paths in separate contexts
- Added toggle setting for drag/drop in Resource and Element trees
- [#MODX-2346] Allow login/logout processors to handle multiple contexts
- [#MODX-2405] Fixed issue with border on portal panels in mgr home screen
- Fixed issue with TV output render that stripped whitespace in delimiter