@@ -13,10 +13,11 @@ if (!$modx->hasPermission('directory_remove')) return $modx->error->failure($mod
 $modx->lexicon->load('file');
 
 if (empty($scriptProperties['dir'])) return $modx->error->failure($modx->lexicon('file_folder_err_ns'));
+$ctx = !empty($scriptProperties['ctx']) ? $scriptProperties['ctx'] : 'mgr';
 
 /* get base paths and sanitize incoming paths */
 $modx->getService('fileHandler','modFileHandler');
-$root = $modx->fileHandler->getBasePath();
+$root = $modx->fileHandler->getBasePath(false,$ctx);
 
 /* in case rootVisible is true */
 $path = str_replace(array(
